--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li><a
-                    href="https://api.whatsapp.com/?phone=919999999999&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses">Message
+                    href="https://api.whatsapp.com/?phone=919162078428&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses">Message
                     Us</a></li>
 
 
@@ -39,17 +39,14 @@
 
     <section class="background firstSection"> <div class="box-main">
         <div class="firstHalf">
-            <p class="text-big">COSMOS Study Center</p>
+            <p class="text-big">COSMOS Study Center,Deoghar</p>
             <p class="text-small">COSMOS Study Center was established on August 2015 which is situated in
                 the pious city of Baidyanathdham Deoghar at Castairs Town. The institute was started with the purpose of
                 value based education with character building to youngsters and not only for bookish learning.
                 Institute's motto is knowledge is that which liberates, which is indeed the ultimate goal of every human
-                being. The students of the institution has created history by their performance in the year 2017. Its
-                student Rahul has been selected for the admission in class XI in R.K Mission Deoghar,one of the most
-                prestigious residential school of India. He got 9th rank in the entrance. Avinash Kumar got 100th rank
-                in Polytechnic.</p>
+                being.</p>
             <div class="button">
-            <a href="http://youtube.com/user/ShuvamRaha">
+            <a href="https://www.youtube.com/user/ShuvamRaha">
                 <button class="btn">E-Learning</button> 
             </a>
             <a href="tel:9162078428">
@@ -66,14 +63,7 @@
     <section class="section">
         <div class="paras">
             <p class="sectionTag text-big">From The Director's Desk</p>
-            <p class="sectionSubTag text-small">COSMOS Study Center was established on August 2015 which is situated in
-                the pious city of Baidyanathdham Deoghar at Castairs Town. The institute was started with the purpose of
-                value based education with character building to youngsters and not only for bookish learning.
-                Institute's motto is knowledge is that which liberates, which is indeed the ultimate goal of every human
-                being. The students of the institution has created history by their performance in the year 2017. Its
-                student Rahul has been selected for the admission in class XI in R.K Mission Deoghar,one of the most
-                prestigious residential school of India. He got 9th rank in the entrance. Avinash Kumar got 100th rank
-                in Polytechnic. </p>
+            <p class="sectionSubTag text-small"> Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, story telling, discussion and directed research. Education frequently takes place under the guidance of educators, however learners can also educate themselves. Education can take place in formal or informal settings and any experience that has a formative effect on the way one thinks, feels, or acts may be considered educational.Msr. Shivam Raha</p>
         </div>
         <div class="thumbnail">
             <img src="img1/bg2.jpg" alt="image" class="imgFluid">
@@ -85,7 +75,7 @@
             <p class="sectionSubTag text-small">Learning was never so much of fun.Why to miss Your classes during this
                 lockdown? Now Cosmos Study Center brings online classes for students of C.B.S.E and I.C.S.E, for classes
                 VIII to X (science, mathematics and computer). For free demo refer to our youtube channel Or Call Us
-                Know To Know More. <a href="http://youtube.com/user/ShuvamRaha">Click Here To Visit Our You Tube Channel</a></p>
+                Know To Know More. <a href="https://www.youtube.com/user/ShuvamRaha">Click Here To Visit Our You Tube Channel</a></p>
         </div>
         <div class="thumbnail">
             <img src="img1/bg3.jpeg" alt="image" class="imgFluid">
