--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li><a
-                    href="https://api.whatsapp.com/?phone=919162078428&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses">Message
+                    href="https://api.whatsapp.com/?phone=919162078428>Message
                     Us</a></li>
 
 
@@ -63,7 +63,7 @@
     <section class="section">
         <div class="paras">
             <p class="sectionTag text-big">From The Director's Desk</p>
-            <p class="sectionSubTag text-small"> Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, story telling, discussion and directed research. Education frequently takes place under the guidance of educators, however learners can also educate themselves. Education can take place in formal or informal settings and any experience that has a formative effect on the way one thinks, feels, or acts may be considered educational.Msr. Shivam Raha</p>
+            <p class="sectionSubTag text-small"> Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, story telling, discussion and directed research. Education frequently takes place under the guidance of educators, however learners can also educate themselves. Education can take place in formal or informal settings and any experience that has a formative effect on the way one thinks, feels, or acts may be considered educational.</p>
         </div>
         <div class="thumbnail">
             <img src="img1/bg2.jpg" alt="image" class="imgFluid">
