--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
-            <li><a
-                    href="https://api.whatsapp.com/?phone=919162078428>Message
+            <li>
+<a href="https://api.whatsapp.com/?phone=919162078428">Message
                     Us</a></li>
 
 
