--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li>
-<a href="https://api.whatsapp.com/?phone=919162078428">Message
+<a href="https://api.whatsapp.com/?phone=19162078428">Message
                     Us</a></li>
 
 
@@ -94,7 +94,7 @@
                 That They Can Excel In Each And Every Field Of Their Life.</p>
         </div>
         <div class="thumbnail">
-            <img src="img1/bg4.png" alt="image" class="imgFluid">
+            <img src="img1/bg5.jpg" alt="image" class="imgFluid">
         </div>
     </section>
     <!--
