--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li>
-<a href="https://api.whatsapp.com/?phone=19162078428">Message
+<a href= "https://api.whatsapp.com/send?phone=919162078428&text=Hi%2CI%20Am%20Interested%20In%20Your%20Courses.Kindly%20Guide%20Me%20Through%20This%20Process.%20">Message
                     Us</a></li>
 
 
