--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-list v-class-resp">
             <div class="logo"><img src="img1/bg4.png" alt="logo"> </div>
             <li><a href="#home">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">Our Achievements</a></li>
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li>
