--- a/gallery.html
+++ b/gallery.html
@@ -19,10 +19,10 @@
         <ul class="nav-list v-class-resp">
             <div class="logo"><img src="img1/bg4.png" alt="logo"> </div>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#gallery">Our Achievemnts</a></li>
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
-            <li><a href="https://api.whatsapp.com/?phone=919999999999&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses">Message Us</a></li>
+            <li><a href="https://api.whatsapp.com/?phone=919999999999&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses"><i class="fab fa-whatsapp"></i>Message Us</a></li>
 
 
         </ul>
