--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
             <li><a href="#gallery">Our Achievemnts</a></li>
             <li><a href="#downloads">Downloads</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
-            <li><a href="https://api.whatsapp.com/?phone=919999999999&text=Hi%20,%20I%20Am&20Interested%20In%20Your%20Courses%20.%20Kindly%Guide%20Me%20Through%20Your%20Courses"></i>Message Us</a></li>
+            <li><a href=" https://api.whatsapp.com/send?phone=919162078428&text=Hi%2CI%20Am%20Interested%20In%20Your%20Courses.Kindly%20Guide%20Me%20Through%20This%20Process.%20  "></i>Message Us</a></li>
 
 
         </ul>
