--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
     </section>
 -->
-
+<img src="img1/3.png" alt="" width="100%" height="100%">
    <section class="contact">
         <h2 class="text-center"> </h2>
         <div class="form">
