--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
         </div>
     </section>
 -->
-<img src="img1/3.png" alt="" width="100%" height="100%">
+
    <section class="contact">
+<img src="img1/bg6.jpg" alt="" width="100%" height="100%">
         <h2 class="text-center"> </h2>
         <div class="form">
 
