--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 -->
 
    <section class="contact">
+
+        <h2 class="text-center">Know Us</h2>
 <img src="img1/bg6.jpg" alt="" width="100%" height="100%">
-        <h2 class="text-center"> </h2>
         <div class="form">
 
             <!-- Paste The Script To Add The Form Here -->
