--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <p class="text-footer1">
             Cosmos Study Center&reg;<br>
-            Castairs Town,B.Deoghar,Jharkhand<br>
+            Castairs Town,Sundar Lal Mishra Road,B.Deoghar,Jharkhand<br>
             ☏ Contact Number:9162078428<br>
         </p>
 
