--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="firstHalf">
             <p class="text-big">COSMOS Study Center,Deoghar</p>
             <p class="text-small">COSMOS Study Center was established on August 2015 which is situated in
-                the pious city of Baidyanathdham Deoghar at Castairs Town. The institute was started with the purpose of
+                the pious city of Baidyanathdham Deoghar at Castairs Town,Sundar Lal Mishra Road. The institute was started with the purpose of
                 value based education with character building to youngsters and not only for bookish learning.
                 Institute's motto is knowledge is that which liberates, which is indeed the ultimate goal of every human
                 being.</p>
