--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="logo"><img src="img1/bg4.png" alt="logo"> </div>
             <li><a href="#home">Home</a></li>
             <li><a href="gallery.html">Our Achievements</a></li>
-            <li><a href="#downloads">Downloads</a></li>
+            <li><a href="#know">Know Us</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li>
 <a href= "https://api.whatsapp.com/send?phone=919162078428&text=Hi%2CI%20Am%20Interested%20In%20Your%20Courses.Kindly%20Guide%20Me%20Through%20This%20Process.%20">Message
@@ -136,7 +136,7 @@
     </section>
 -->
 
-   <section class="contact">
+   <section class="contact" id="know">
 
         <h2 class="text-center">Know Us</h2>
 <br>
