--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
             <div class="logo"><img src="img1/bg4.png" alt="logo"> </div>
             <li><a href="index.html">Home</a></li>
             <li><a href="#gallery">Our Achievemnts</a></li>
-            <li><a href="#downloads">Downloads</a></li>
+            <li><a href="https://www.cosmosdeoghar.tk/#know  ">Know Us</a></li>
             <li><a href="tel:9162078428">☏ Call Now</a></li>
             <li><a href=" https://api.whatsapp.com/send?phone=919162078428&text=Hi%2CI%20Am%20Interested%20In%20Your%20Courses.Kindly%20Guide%20Me%20Through%20This%20Process.%20  "></i>Message Us</a></li>
 
