--- a/index.html
+++ b/index.html
@@ -99,22 +99,18 @@
 <br>
 <br>
 
-    <!--
+    
     <section id="services-container">
-        <h1 class="h-primary center">Our Achievers</h1>
+        <h1 class="h-primary center">Our Faculties</h1>
         <div id="services">
             <div class="box">
-                <img src="img1/logo3.jpeg" alt="logo">
-                <h2 class="h-secondary center">Food Catering</h2>
-                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
-                    voluptas beatae facilis labore, omnislorem20
-                    Lorem ipsum dolor sit amet hfdjjfg fggngfng gghghg fgfgvn g guguh hui guujuu jguj consectetur
-                    adipisicing elit. Ratione dolor, dolore pariatur alias ipsa
-                    sapiente optio nostrum nulla quas accusantium! sint quae eum.</p>
+                <img src="img1/bg3.jpg" alt="logo">
+                <h2 class="h-secondary center">Msr. Shuvam Raha(PGT Physics)</h2>
+                <p class="center">Msr. Shuvam Raha Is The Founder Director Of COSMOS Study Center.He Has Opened This Institute With An Aim To Provide Quality Education To The Students Of Deoghar.The Prime Aim Of This Institution Is To boost The Young Minds Of The Students To Lead A Life Of Respect,Honour And Dignity And Look Forward To Achieve Their Dreams. </p>
             </div>
             <div class="box">
-                <img src="img1/2.png" alt="">
-                <h2 class="h-secondary center">Bulk Ordering</h2>
+                <img src="img1/bg4.png" alt="">
+                <h2 class="h-secondary center">Msr. Suvash Kumar</h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab
                     dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
@@ -122,6 +118,9 @@
                     sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
                     voluptas beatae facilis labore, omnis sint quae eum.</p>
             </div>
+
+
+<!--
             <div class="box">
                 <img src="img1/3.png" alt="">
                 <h2 class="h-secondary center">Food Ordering</h2>
