--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
         <h1 class="h-primary center">Our Faculties</h1>
         <div id="services">
             <div class="box">
-                <img src="img1/bg3.jpg" alt="logo">
+                <img src="img1/bg2.jpg" alt="logo">
                 <h2 class="h-secondary center">Msr. Shuvam Raha(PGT Physics)</h2>
                 <p class="center">Msr. Shuvam Raha Is The Founder Director Of COSMOS Study Center.He Has Opened This Institute With An Aim To Provide Quality Education To The Students Of Deoghar.The Prime Aim Of This Institution Is To boost The Young Minds Of The Students To Lead A Life Of Respect,Honour And Dignity And Look Forward To Achieve Their Dreams. </p>
             </div>
             <div class="box">
                 <img src="img1/bg4.png" alt="">
-                <h2 class="h-secondary center">Msr. Suvash Kumar</h2>
+                <h2 class="h-secondary center">Msr. Suvash Kumar( Msc. Maths) </h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab
                     dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
