--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <div class="box">
                 <img src="img1/bg4.png" alt="">
-                <h2 class="h-secondary center">Msr. Suvash Kumar( Msc. Maths) </h2>
+                <h2 class="h-secondary center">Msr. Suvash Sadhu( Msc. Maths) </h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab
                     dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
