--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <div class="paras">
             <p class="sectionTag text-big">From The Director's Desk</p>
             <p class="sectionSubTag text-small"> Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, story telling, discussion and directed research. Education frequently takes place under the guidance of educators, however learners can also educate themselves. Education can take place in formal or informal settings and any experience that has a formative effect on the way one thinks, feels, or acts may be considered educational.</p>
+<p class="text-small">Msr. Shuvam Raha</p>
         </div>
         <div class="thumbnail">
             <img src="img1/bg2.jpg" alt="image" class="imgFluid">
@@ -105,11 +106,11 @@
         <div id="services">
             <div class="box">
                 <img src="img1/bg2.jpg" alt="logo">
-                <h2 class="h-secondary center">Msr. Shuvam Raha(PGT Physics)</h2>
+                <h2 class="h-secondary center">Msr. Shuvam Raha(Bachelor Of Computer Application )</h2>
                 <p class="center">Msr. Shuvam Raha Is The Founder Director Of COSMOS Study Center.He Has Opened This Institute With An Aim To Provide Quality Education To The Students Of Deoghar.The Prime Aim Of This Institution Is To boost The Young Minds Of The Students To Lead A Life Of Respect,Honour And Dignity And Look Forward To Achieve Their Dreams. </p>
             </div>
             <div class="box">
-                <img src="img1/bg4.png" alt="">
+                <img src="img1/bg7.jpg" alt="">
                 <h2 class="h-secondary center">Msr. Suvash Sadhu( Msc. Maths) </h2>
                 <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab
