--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             <p class="sectionTag text-big">Join Our Live Classes Today</p>
             <p class="sectionSubTag text-small">Learning was never so much of fun.Why to miss Your classes during this
                 lockdown? Now Cosmos Study Center brings online classes for students of C.B.S.E and I.C.S.E, for classes
-                VIII to X (science, mathematics and computer). For free demo refer to our youtube channel Or Call Us
-                Know To Know More. <a href="https://www.youtube.com/user/ShuvamRaha">Click Here To Visit Our You Tube Channel</a></p>
+                VIII to X (science, mathematics and computer). For free demo refer to our youtube channel Or Call Us To Know More. <a href="https://www.youtube.com/user/ShuvamRaha">Click Here To Visit Our You Tube Channel</a></p>
         </div>
         <div class="thumbnail">
             <img src="img1/bg3.jpeg" alt="image" class="imgFluid">
@@ -112,12 +111,7 @@
             <div class="box">
                 <img src="img1/bg7.jpg" alt="">
                 <h2 class="h-secondary center">Msr. Suvash Sadhu(M.Sc Maths,V.B.U Hazaribagh) </h2>
-                <p class="center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, culpa suscipit error
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde laudantium a incidunt animi ad, ab
-                    dignissimos vero? Unde numquam odit repudiandae perferendis nisi.
-
-                    sint delectus ab dolorum nam. Debitis facere, incidunt voluptates eos, mollitia voluptatem iste sunt
-                    voluptas beatae facilis labore, omnis sint quae eum.</p>
+                <p class="center">COSMOS Study Center Is A Place Where Children Can Gain Real Knowledge.We take pride in being able to play its role in nation building and acting as a blessing to the people of society. The cooperation and faith shown by the people of society on us is really appreciable and commendable.We Promise To Bring Out The Best In Each And Every Child. </p>
             </div>
 
 
