--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
 
 
     </footer>
+<!-- Start of WebFreeCounter Code -->
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gfqxpa&nd=6&style=49" border="0" alt="web counter"></a>
+<!-- End of WebFreeCounter Code -->
     <script src="js/resp.js"></script>
 </body>
 
