--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
     </footer>
 <!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gfqxpa&nd=6&style=49" border="0" alt="web counter"></a>
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvfqxpf&nd=6&style=7" border="0" alt="hit counter"></a>
 <!-- End of WebFreeCounter Code -->
     <script src="js/resp.js"></script>
 </body>
