--- a/index.html
+++ b/index.html
@@ -172,9 +172,7 @@
 
 
     </footer>
-<!-- Start of WebFreeCounter Code -->
-<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gvfqxpf&nd=6&style=7" border="0" alt="hit counter"></a>
-<!-- End of WebFreeCounter Code -->
+<div align='center'><a href='https://www.hit-counts.com/'><img src='http://www.hit-counts.com/counter.php?t=MTQ1Mjg1Ng==' border='0' alt='logo development'></a><BR><a href='https://www.glowgraphics.co.uk/'>logo development</a></div>
     <script src="js/resp.js"></script>
 </body>
 
