--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 
     </footer>
-<div align='center'><a href='https://www.hit-counts.com/'><img src='http://www.hit-counts.com/counter.php?t=MTQ1Mjg1Ng==' border='0' alt='logo development'></a><BR><a href='https://www.glowgraphics.co.uk/'>logo development</a></div>
+<div align='center'><a href='https://www.hit-counts.com/'><img src='http://www.hit-counts.com/counter.php?t=MTQ1Mjg1Ng==' border='0' alt='Visitor Counter'></a></div>
     <script src="js/resp.js"></script>
 </body>
 
