--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <link rel="stylesheet" href="css/responsive.css">
 <script data-ad-client="ca-pub-8338124396022096" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <title>Cosmos Study Center&reg;</title>
+    <title><link rel = "icon" href =  
+
+"img1/bg4.png"  type = "image/x-icon"> 
+
+Cosmos Study Center&reg;</title>
 </head>
 
 <body>
