--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 <script data-ad-client="ca-pub-8338124396022096" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-    <title><link rel = "icon" href =  
-
-"img1/bg4.png"  type = "image/x-icon"> 
+    <title>
 
 Cosmos Study Center&reg;</title>
 </head>
