--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@ Cosmos Study Center&reg;</title>
 </head>
 
 <body>
+
+
+<div id="popup">
+
+    <!-- and here comes the image -->
+    <img src="http://i.imgur.com/cVJrCHU.jpg" alt="popup">
+
+        <!-- Now this is the button which closes the popup-->
+        <button id="close">Close button</button>
+
+        <!-- and finally we close the POPUP FRAME-->
+        <!-- everything on it will show up within the popup so you can add more things not just an image -->
+</div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<script>
+//your jquery script here
+</script>
+
+
+
+
+
     <nav class="navbar background1 h-nav-resp">
         <ul class="nav-list v-class-resp">
             <div class="logo"><img src="img1/bg4.png" alt="logo"> </div>
