--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@ Cosmos Study Center&reg;</title>
 <br>
 <br>
 
+
+
+<div class="banner" style="padding:15px; text-align:center;">
+<div class="banner-content">
+<h1>Download Our App Now</h1>
+<p>Download Our App Today To Get Latest Updates About Educational Updates.</p>
+<a href="www.cosmosdeoghar.tk" class="btn btn-primary">DOWNLOAD NOW</a>
+</div>
+</div>
+
+
     
     <section id="services-container">
 <div id="services">
