--- a/gallery.html
+++ b/gallery.html
@@ -73,7 +73,21 @@
             <a href="img2/8.jpg" class="image">
               <img src="img2/8.jpg" alt="">
             </a>
-            
+            <a href="img2/9.jpg" class="image">
+              <img src="img2/9.jpg" alt="">
+            </a>
+  
+            <a href="img2/10.jpg" class="image">
+              <img src="img2/10.jpg" alt="">
+            </a>
+  
+            <a href="img2/11.jpg" class="image">
+              <img src="img2/11.jpg" alt="">
+            </a>
+  
+            <a href="img2/12.jpg" class="image">
+              <img src="img2/12.jpg" alt="">
+            </a>
   
   
           </div>
