--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,13 @@
         }
       });
     </script>
-     
+     <footer class="background2">
+        <p class="text-footer1">
+            Cosmos Study Center&reg;<br>
+            Castairs Town,B.Deoghar,Jharkhand<br>
+            ☏ Contact Number:9162078428<br>
+        </p>
+       
 
  
     <script src="js/resp.js"></script>
