--- a/index.html
+++ b/index.html
@@ -192,7 +192,11 @@ Cosmos Study Center&reg;</title>
 
 
     </footer>
-<div align='center'><a href='https://www.hit-counts.com/'><img src='http://www.hit-counts.com/counter.php?t=MTQ1Mjg1Ng==' border='0' alt='Visitor Counter'></a></div>
+
+<!-- Badge Code - Do Not Change The Code -->
+<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="881b3e3f31da070ca3a2a518d5f442e2|9|ip|158645|rgb(90, 84, 84);|#ffffff|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+<!-- Badge Code End Here -->
+
     <script src="js/resp.js"></script>
 </body>
 
