--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Cosmos Study Center&reg;</title>
     </footer>
 
 <!-- Badge Code - Do Not Change The Code -->
-<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="881b3e3f31da070ca3a2a518d5f442e2|9|ip|158645|rgb(90, 84, 84);|#ffffff|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+<a class="hitCounter" target="_blank" title="Hit counter" data-name="881b3e3f31da070ca3a2a518d5f442e2|9|ip|158645|rgb(90, 84, 84);|#ffffff|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
 <!-- Badge Code End Here -->
 
     <script src="js/resp.js"></script>
