--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Cosmos Study Center&reg;</title>
                 Institute's motto is knowledge is that which liberates, which is indeed the ultimate goal of every human
                 being.</p>
             <div class="button">
-            <a href="https://www.youtube.com/user/ShuvamRaha">
+            <a href="https://www.ieducate.tk">
                 <button class="btn">E-Learning</button> 
             </a>
             <a href="tel:9162078428">
