--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Cosmos Study Center&reg;</title>
 </head>
 
 <body>
-
+<!--
 
 
 
@@ -198,6 +198,10 @@ Cosmos Study Center&reg;</title>
 <!-- Badge Code End Here -->
 
     <script src="js/resp.js"></script>
+
+-->
+ACCESS NOT AVAILABLE 
+
 </body>
 
 </html>
